--- a/QuantitySystemSolution/QuantitySimpleTest/QuantitySimpleTest.csproj
+++ b/QuantitySystemSolution/QuantitySimpleTest/QuantitySimpleTest.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -51,12 +53,23 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestingTorqueForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestingTorqueForm.Designer.cs">
+      <DependentUpon>TestingTorqueForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QuantitySystem\QuantitySystem.csproj">
       <Project>{78909C0B-AA53-48F9-8AC9-F3937383629C}</Project>
       <Name>QuantitySystem</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TestingTorqueForm.resx">
+      <DependentUpon>TestingTorqueForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
