--- a/QuantitySystemSolution/UnitsTestingProject/UnitsTestingProject.csproj
+++ b/QuantitySystemSolution/UnitsTestingProject/UnitsTestingProject.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6B22C63C-7927-4CB2-87A8-2BA3428570DC}</ProjectGuid>
+    <ProjectGuid>{2E1B9096-614C-405F-8587-1897F451F139}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuantitySystemTestingProject</RootNamespace>
-    <AssemblyName>QuantitySystemTestingProject</AssemblyName>
+    <RootNamespace>UnitsTestingProject</RootNamespace>
+    <AssemblyName>UnitsTestingProject</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -50,18 +50,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AngleTest.cs" />
-    <Compile Include="AnyQuantityTest.cs" />
-    <Compile Include="ComplexNumber.cs" />
-    <Compile Include="LengthDescriptorTest.cs" />
-    <Compile Include="LengthTest.cs" />
-    <Compile Include="MassTest.cs" />
+    <Compile Include="SISystemTest.cs" />
+    <Compile Include="SI\AmpereTest.cs" />
+    <Compile Include="SI\CandelaTest.cs" />
+    <Compile Include="SI\GramTest.cs" />
+    <Compile Include="SI\KelvinTest.cs" />
+    <Compile Include="SI\MetreTest.cs" />
+    <Compile Include="Imperial\MileTest.cs" />
+    <Compile Include="SI\MoleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuantityDimensionTest.cs" />
+    <Compile Include="SI\SecondTest.cs" />
+    <Compile Include="UnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AuthoringTests.txt" />
-    <Content Include="Testing Ideology.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QuantitySystem\QuantitySystem.csproj">
