Unit Path Discovery for the same Unit system new units all of this is still in development mode.

--- a/QuantitySystemSolution/UnitsTestingProject/UnitsTestingProject.csproj
+++ b/QuantitySystemSolution/UnitsTestingProject/UnitsTestingProject.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="SISystemTest.cs" />
+    <Compile Include="SIUnitTest.cs" />
     <Compile Include="SI\AmpereTest.cs" />
     <Compile Include="SI\CandelaTest.cs" />
     <Compile Include="SI\GramTest.cs" />
