--- a/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
+++ b/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
@@ -65,6 +65,8 @@
     <Compile Include="DimensionDescriptors\IDimensionDescriptor.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="QuantitiesNotDimensionallyEqualException.cs" />
+    <Compile Include="Quantities\AngularAcceleration.cs" />
+    <Compile Include="Quantities\AngularVelocity.cs" />
     <Compile Include="Quantities\BaseQuantities\AmountOfSubstance.cs" />
     <Compile Include="Quantities\BaseQuantities\AnyQuantity_Operations.cs" />
     <Compile Include="Quantities\DimensionlessQuantities\Angle.cs" />
@@ -83,6 +85,7 @@
     <Compile Include="Quantities\Force.cs" />
     <Compile Include="Quantities\DimensionlessQuantities\DimensionlessQuantity.cs" />
     <Compile Include="Quantities\DimensionlessQuantities\Reynolds.cs" />
+    <Compile Include="Quantities\Frequency.cs" />
     <Compile Include="Quantities\KinematicViscosity.cs" />
     <Compile Include="Quantities\Power.cs" />
     <Compile Include="Quantities\Pressure.cs" />
@@ -96,11 +99,23 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuantityDimension.cs" />
     <Compile Include="QuantityNotFoundException.cs" />
+    <Compile Include="Units\CGS\KinematicViscosityUnits.cs" />
+    <Compile Include="Units\CGS\EnergyUnits.cs" />
+    <Compile Include="Units\CGS\ForceUnits.cs" />
+    <Compile Include="Units\CGS\ViscosityUnits.cs" />
+    <Compile Include="Units\SIAccepted\AreaUnits.cs" />
+    <Compile Include="Units\SIAccepted\EnergyUnits.cs" />
+    <Compile Include="Units\SIAccepted\LengthUnits.cs" />
+    <Compile Include="Units\SIAccepted\MassUnits.cs" />
+    <Compile Include="Units\SIAccepted\PressureUnits.cs" />
+    <Compile Include="Units\SIAccepted\VelocityUnits.cs" />
+    <Compile Include="Units\SIAccepted\VolumeUnits.cs" />
     <Compile Include="Units\Attributes\DefaultUnitAttribute.cs" />
     <Compile Include="Units\Attributes\SIUnitAttribute.cs" />
     <Compile Include="Units\Attributes\UnitAttribute.cs" />
     <Compile Include="Units\Attributes\ReferenceUnitAttribute.cs" />
     <Compile Include="Units\Imperial\LengthUnits.cs" />
+    <Compile Include="Units\Imperial\VolumeUnits.cs" />
     <Compile Include="Units\SI\BaseUnits\Ampere.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -121,6 +136,7 @@
     </Compile>
     <Compile Include="Units\SI\BaseUnits\Second.cs" />
     <Compile Include="Units\SIPrefixes.cs" />
+    <Compile Include="Units\SI\Hertz.cs" />
     <Compile Include="Units\SI\Joule.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -130,6 +146,7 @@
     <Compile Include="Units\SI\Pascal.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Units\SI\Radian.cs" />
     <Compile Include="Units\SI\SIUnit.cs" />
     <Compile Include="Units\SI\Watt.cs">
       <SubType>Code</SubType>
@@ -137,16 +154,19 @@
     <Compile Include="Units\Unit.cs" />
     <Compile Include="Units\UnitException.cs" />
     <Compile Include="Units\UnitNotFoundException.cs" />
+    <Compile Include="Units\UnitPath.cs" />
     <Compile Include="Units\UnitsNotDimensionallyEqualException.cs" />
     <Compile Include="Units\SIPrefix.cs" />
     <Compile Include="Units\SIPrefixException.cs" />
     <Compile Include="Units\SISystem.cs" />
     <Compile Include="Units\Unit_Dynamic.cs" />
+    <Compile Include="Units\Unit_Operations.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Notes\Dimensions Pattern.txt" />
     <Content Include="Notes\Lengths Description.txt" />
     <Content Include="Notes\SIUnit Multiplication.txt" />
+    <Content Include="Notes\Units Conversion.txt" />
     <Content Include="Notes\Units Ladder.txt" />
     <Content Include="Notes\Units pattern.txt" />
     <Content Include="Notes\Units Patterns 2.txt" />
