--- a/QuantitySystemSolution/UnitsTestingProject/UnitsTestingProject.csproj
+++ b/QuantitySystemSolution/UnitsTestingProject/UnitsTestingProject.csproj
@@ -16,6 +16,8 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>QuantitySystem.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -73,6 +75,12 @@
       <Project>{78909C0B-AA53-48F9-8AC9-F3937383629C}</Project>
       <Name>QuantitySystem</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Shadow Include="Test References\QuantitySystem.accessor" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="QuantitySystem.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
