[Quantity System Framework 1.0.7]
* New Features
	- Add support for parsing units with exponent like <cm^2>
	- Add support for simple mixed units with one '/' division charachter 
		<kg.m/s^2> gives Force Quantity
	- The first use the DLR Expressions instead of Linq Expressions 
		{this is a strategic transfer to support more features in the future}	
		{also because built in linq expressions make errors in mono under linux :( }
			
	
* New Units
	-psi  for pound per square inch  for pressure
	
* Many Fixes
	- Fixing of Metric Prefix multiplication and division  (although need testing).
	- conversion from metric units had an error because exponent wasn't taken in consideration.

--- a/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
+++ b/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Units\English\PowerUnits.cs" />
     <Compile Include="Units\English\EnergyUnits.cs" />
     <Compile Include="Units\English\ForceUnits.cs" />
+    <Compile Include="Units\English\PressureUnits.cs" />
     <Compile Include="Units\English\Rankine.cs" />
     <Compile Include="Units\English\VelocityUnits.cs">
       <SubType>Code</SubType>
