--- a/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
+++ b/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
@@ -55,8 +55,15 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QsEvaluator.cs" />
-    <Compile Include="QsVar.cs" />
+    <Compile Include="QsHost.cs" />
+    <Compile Include="QsCommandLine.cs" />
+    <Compile Include="QsOptionsParser.cs" />
+    <Compile Include="QuantitySystem.Runtime\QsEvaluator.cs" />
+    <Compile Include="QuantitySystem.Runtime\QsScriptCode.cs" />
+    <Compile Include="QuantitySystem.Runtime\QsVar.cs" />
+    <Compile Include="QuantitySystem.Runtime\QsContext.cs" />
+    <Compile Include="QuantitySystem.Runtime\Token.cs" />
+    <Compile Include="QuantitySystem.Runtime\TokenClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QuantitySystem\QuantitySystem.csproj">
