[Quantity System Framework 1.0.9]
*New Features
	- Power operator has been add  x^2   -- Cautious {you only can raise to dimensionless numbers}
	- More toward DLR support: the program is entirely run under QsHost which subclass DLR ConsoleHost
	- Functions appear for the first time
		Declaration is normal like ordinary math 
			Qs> f(x) = x^2+64
			Qs> f(x,y) = x/y
		Called
			Qs> 10 - f(f(40,20))  + 20
				DimensionlessQuantity: -38 <1>	

[Quantity System Framework 1.0.8.1]

- New Quantities
	Molar Mass       g/mol
	Heat Capacity    J/K
- New units
	lbmol  pound mol

--- a/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
+++ b/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
@@ -53,17 +53,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParticleLexer\Token.cs" />
+    <Compile Include="ParticleLexer\TokenPatternAttribute.cs" />
+    <Compile Include="ParticleLexer\TokenType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QsHost.cs" />
     <Compile Include="QsCommandLine.cs" />
     <Compile Include="QsOptionsParser.cs" />
     <Compile Include="QuantitySystem.Runtime\QsEvaluator.cs" />
+    <Compile Include="QuantitySystem.Runtime\QsException.cs" />
+    <Compile Include="QuantitySystem.Runtime\QsFunction.cs" />
     <Compile Include="QuantitySystem.Runtime\QsScriptCode.cs" />
     <Compile Include="QuantitySystem.Runtime\QsVar.cs" />
     <Compile Include="QuantitySystem.Runtime\QsContext.cs" />
-    <Compile Include="QuantitySystem.Runtime\Token.cs" />
-    <Compile Include="QuantitySystem.Runtime\TokenClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QuantitySystem\QuantitySystem.csproj">
