--- a/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
+++ b/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Quantities\Energy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuantityDimension.cs" />
+    <Compile Include="QuantityException.cs" />
     <Compile Include="QuantityNotFoundException.cs" />
     <Compile Include="Units\Astronomical\EnergyUnits.cs" />
     <Compile Include="Units\Astronomical\LengthUnits.cs" />
