[Quantity System Framework 1.1] - unit modifier '!' 	the modifier will modify the lenght units to produce radius length quantities
	so now you can say a = 10<N.m!>  which will produce Torque

- separation between DLR and quantity system framwork

- functions are called by delegates not hard coded expressions.

- functions can refer to variables declared in global scope 
	but local parameters with the same name is habing the higher priority	

- Raise to power enhanced 
	now fractions are included so 1<kg>^0.5 = 1<kg^0.5>
	however you can't generate quantities with fraction values. 
                    only by raising to power

--- a/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
+++ b/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Qs</RootNamespace>
-    <AssemblyName>QuantitySystem.Runtime</AssemblyName>
+    <AssemblyName>Qs</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -67,7 +67,6 @@
     <Compile Include="Runtime\QsEvaluator.cs" />
     <Compile Include="Runtime\QsException.cs" />
     <Compile Include="Runtime\QsFunction.cs" />
-    <Compile Include="Runtime\QsFunctionCallSiteBinder.cs" />
     <Compile Include="Runtime\QsScriptCode.cs" />
     <Compile Include="Runtime\QsVar.cs" />
   </ItemGroup>
