--- a/QuantitySystemSolution/QsTestProject/QsTestProject.csproj
+++ b/QuantitySystemSolution/QsTestProject/QsTestProject.csproj
@@ -1,22 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{615A100B-4890-434E-8869-2A9B3200D664}</ProjectGuid>
+    <ProjectGuid>{70D4A4DF-115F-440E-B97F-E76974A8AC14}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Qs</RootNamespace>
-    <AssemblyName>Qs</AssemblyName>
+    <RootNamespace>QsTestProject</RootNamespace>
+    <AssemblyName>QsTestProject</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
-    <TargetFrameworkSubset>Client</TargetFrameworkSubset>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,41 +43,38 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLR\Microsoft.Scripting.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ParticleLexer\Token.cs" />
-    <Compile Include="ParticleLexer\TokenPatternAttribute.cs" />
-    <Compile Include="ParticleLexer\TokenType.cs" />
+    <Compile Include="GammaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QsCommands.cs" />
-    <Compile Include="QsTypes\Gamma.cs" />
-    <Compile Include="Runtime\QsBinder.cs" />
-    <Compile Include="Runtime\QsContext.cs" />
-    <Compile Include="Runtime\QsEvaluator.cs" />
-    <Compile Include="Runtime\QsException.cs" />
-    <Compile Include="Runtime\QsFunction.cs" />
-    <Compile Include="Runtime\QsScriptCode.cs" />
-    <Compile Include="Runtime\QsVar.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AuthoringTests.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuantitySystem.Runtime\Qs.csproj">
+      <Project>{615A100B-4890-434E-8869-2A9B3200D664}</Project>
+      <Name>Qs</Name>
+    </ProjectReference>
     <ProjectReference Include="..\QuantitySystem\QuantitySystem.csproj">
       <Project>{78909C0B-AA53-48F9-8AC9-F3937383629C}</Project>
       <Name>QuantitySystem</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
