[Quantity System Framework 1.1.2]
- [Specific Weight] quantity added
- optimization for unit conversions  (caching added for already calculated unit conversions)

- enahcing Qs hosting to be used dynamically inside any .NET applications using DLR hosting APIs.
	to create the run time: 
            var QsScope = sr.ExecuteFile("test.qs");            
            var QsEngine = sr.GetEngine("Qs");
            var a = QsEngine.Execute("a=5<m>", QsScope) as AnyQuantity<double>;
		
- factorial optimized. {I am still searching how to make factorial for real numbers}

--- a/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
+++ b/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Quantities\RadiantIntensity.cs" />
     <Compile Include="Quantities\SpecificHeat.cs" />
     <Compile Include="Quantities\SpecificVolume.cs" />
+    <Compile Include="Quantities\SpecificWeight.cs" />
     <Compile Include="Quantities\Torque.cs">
       <SubType>Code</SubType>
     </Compile>
