--- a/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
+++ b/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ParticleLexer\TokenPatternAttribute.cs" />
     <Compile Include="ParticleLexer\TokenType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Qs.cs" />
     <Compile Include="QsCommands.cs" />
     <Compile Include="QsTypes\Gamma.cs" />
     <Compile Include="Runtime\QsBinder.cs" />
